--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,81 @@
 header {
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  background-color: black;
+}
+
+.CervezAppTitle{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-size: 40px;
+  font-weight: bolder;
+  color: white;
+}
+.CervezAppTitle:hover{
+  font-size: 40px;
+  color: rgb(94, 94, 94);
+  font-family: 'Pacifico', cursive; 
+}
+
+.SignUp-LogIn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.LinkNavBar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 0px 5px 0px;
+  background-color:white;
+  border-bottom: 2px solid black;
+  border-top: 2px solid black;
+}
+
+.LinksInNavBar{
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.LogIn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.SignUp{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+input{
+  margin:5px;
+}
+
+.HomePageDisplay{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+}
+
+.BeerFillUp{
+  height: 95%;
+  width: 100%;
+  object-fit: cover;
+  margin:15px;
 }
 
 a {
@@ -8,6 +84,7 @@ a {
 
 .search {
   width: 200px;
+  margin: 25px 10px 10px 10px;
 }
 
 .BreweriesList{
