--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,17 @@ header {
   background-color: black;
 }
 
+input{
+  margin:5px;
+}
+
+a {
+  margin: 10px;
+}
+
+button{
+  margin:5px;
+}
 .CervezAppTitle{
   display: flex;
   justify-content: center;
@@ -58,10 +69,6 @@ header {
   flex-direction: column;
 }
 
-input{
-  margin:5px;
-}
-
 .HomePageDisplay{
   display: flex;
   justify-content: center;
@@ -78,13 +85,20 @@ input{
   margin:15px;
 }
 
-a {
-  margin: 10px;
+.BreweryListHeader{
+  display:flex;
+  align-items: center;
+  justify-items: center;
+  flex-direction: column;
+  color:white;
 }
 
 .search {
+  height: 25px;
   width: 200px;
-  margin: 25px 10px 10px 10px;
+  margin: 5px;
+  border: 10px solid gray;
+  border-radius: 2px;
 }
 
 .BreweriesList{
@@ -95,17 +109,21 @@ a {
   width: 300px;
   height: 300px;
   margin: 10px;
-  border: 2px solid black;
+  border: 4px solid white;
+  background-color:gray;
+  color:white;
 }
 
 .BreweryName{
   display: inline-block;
   width: 280px;
   margin: 10px;
+  color:white;
 }
 
 .BreweryStreet, .BreweryAddress, .BreweryPhone, .BreweryWebsite{
   margin: 5px;
+  color:white;
 }
 
 .BreweryWebsite{
@@ -119,9 +137,50 @@ a {
   flex-direction: row;
   flex-wrap: wrap;
   text-align: center;
+  background-color: black;
+  color:white;
+}
+
+.BeerContainer{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: black;
+  color:white;
+}
+
+.BeerListInContainer{
+  display:flex;
+  align-items: left;
+  justify-content: left;
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-weight: bold;
+  background-color:black;
+  color:white;
+
+}
+
+.BeersList{
+  margin: 5px;
+  border: 2px solid white;
+  background-color: gray;
+  color:white;
+}
+
+.BeerTitle{
+  color:white;
+  font-size: 20px;
+  margin:5px;
+  padding: 0px 2px 0px 2px
 }
 
 .small {
   height: 20px;
   width: 20px;
+  margin: 2px;
+  border-radius: 3px;
+  object-fit: cover;
 }
