--- a/src/App.css
+++ b/src/App.css
@@ -223,3 +223,104 @@ button{
   border-radius: 3px;
   object-fit: cover;
 }
+
+
+
+#test {
+  margin-left: 125px;
+  margin-top: 130px;
+}
+
+.pie {
+  position: relative;
+  /* margin: 1em auto; */
+  border: 1px solid black;
+  padding: 0px;
+  width: 25em; 
+  height: 25em;
+  border-radius: 50%;
+  list-style: none;
+}
+
+.slice {
+  overflow: hidden;
+  position: absolute;
+  top: 0px; 
+  right: 0px;
+  width: 50%; 
+  height: 50%;
+  transform-origin: 0% 100%; 
+}
+
+.slice:nth-child(1) {
+  transform: rotate(0deg) skewY(-45deg);
+}
+
+.slice:nth-child(2) {
+  transform: rotate(45deg) skewY(-45deg);
+}
+
+.slice:nth-child(3) {
+  transform: rotate(90deg) skewY(-45deg);
+}
+
+.slice:nth-child(4) {
+  transform: rotate(135deg) skewY(-45deg);
+}
+
+.slice:nth-child(5) {
+  transform: rotate(180deg) skewY(-45deg);
+}
+
+.slice:nth-child(6) {
+  transform: rotate(225deg) skewY(-45deg);
+}
+
+.slice:nth-child(7) {
+  transform: rotate(270deg) skewY(-45deg);
+}
+
+.slice:nth-child(8) {
+  transform: rotate(315deg) skewY(-60deg);
+}
+
+.slice-contents {
+  position: absolute;
+  left: -100%;
+  width: 200%; height: 200%;
+  border-radius: 50%;
+  transform: skewY(45deg);
+}
+
+#first {
+  background-color: lightskyblue;
+}
+
+#second {
+  background-color: lemonchiffon;
+}
+
+#third {
+  background-color: mistyrose;
+}
+
+#fourth {
+  background-color: lime;
+}
+
+#fifth {
+  background-color: lightskyblue;
+}
+
+#sixth {
+  background-color: lemonchiffon;
+}
+
+#seventh {
+  background-color: mistyrose;
+}
+
+#eighth {
+  background-color: lime;
+  transform: skewY(60deg);
+}
