--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ button{
   color: white;
   font-weight: bold;
   text-decoration: none;
+  font-size:18px;
 }
 
 .LinkNavBar{
@@ -66,6 +67,10 @@ button{
   color: black;
   text-decoration: none;
   font-weight: bold;
+}
+
+.LinksInNavBar:hover, .userOptions:hover{
+  text-decoration: underline;
 }
 
 .LogIn{
@@ -376,4 +381,17 @@ button{
 .beerVote {
   display: flex;
   align-items: center;
+  margin-right: 10px;
+}
+
+.logoutButton {
+  background-color: black;
+  color: white;
+  font-size: 18px;
+  border: none;
+  font-weight: bold;
+}
+
+.userName {
+  text-align: center;
 }
