--- a/src/App.css
+++ b/src/App.css
@@ -425,7 +425,8 @@ button{
   justify-content: center;
 }
 
-.profileBeersContainer, .favoriteBeersContainer, .beersTriedContainer {
+.profileBeersContainer, .favoriteBeersContainer, .beersTriedContainer,
+.profileBreweryContainer, .favoriteBreweriesContainer, .breweriesTriedContainer {
   border: 3px solid white;
   /* width: 300px; */
   width: 25vw;
@@ -441,7 +442,8 @@ button{
     flex-direction: column;
     align-items: center;
   }
-  .profileBeersContainer, .favoriteBeersContainer, .beersTriedContainer {
+  .profileBeersContainer, .favoriteBeersContainer, .beersTriedContainer,
+  .profileBreweryContainer, .favoriteBreweriesContainer, .breweriesTriedContainer {
     border: 3px solid white;
     /* width: 300px; */
     width: 80vw;
