--- a/src/App.css
+++ b/src/App.css
@@ -399,11 +399,14 @@ button{
 
 .bubbles {
   background-image: url("https://thumbs.gfycat.com/CornyColdGoldfinch-size_restricted.gif");
-  /* height: 100vh; */
-  /* width: 100vw; */
+  height: 100vh;
+  width: 100vw;
   /* object-fit:cover; */
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  /* flex-grow: 1; */
+  flex-direction: column;
 }
 
 .addBeer {
