--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,7 @@ button{
   text-align: center;
   background-color: black;
   color:white;
+  margin-bottom: 50px;
 }
 
 .BeerContainer{
@@ -189,6 +190,7 @@ button{
   color:white;
   padding: 10px;
   border-radius: 5px;
+  margin-bottom: 75px;
 }
 
 .BeersList{
@@ -437,8 +439,8 @@ button{
 
 .bubbles {
   background-image: url("https://thumbs.gfycat.com/CornyColdGoldfinch-size_restricted.gif");
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; */
   /* object-fit:cover; */
   background-repeat: no-repeat;
   background-size: cover;
@@ -464,6 +466,7 @@ button{
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 100px;
 }
 
 .profileBeersContainer, .favoriteBeersContainer, .beersTriedContainer,
@@ -534,11 +537,20 @@ button{
 
 .footer {
   background:  rgba(0, 0, 0, 0.75);
-  position: relative;
+  position: fixed;
   bottom: 0;
   height: 75px;
   width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-top: auto;
+}
+
+main {
+  height: 100vh;
+}
+
+footer {
+  bottom: 0;
 }
