--- a/src/App.css
+++ b/src/App.css
@@ -493,23 +493,27 @@ button{
 
 #blue {
   background-color: lightskyblue;
+  padding: 2px 2px;
 }
 
 #yellow {
   background-color: lemonchiffon;
+  padding: 2px 2px;
 }
 
 #pink {
   background-color: mistyrose;
+  padding: 2px 2px;
 }
 
 #green {
   background-color: lime;
-  padding: 0px 2px;
+  padding: 2px 2px;
 }
 
 #red {
   background-color: lightcoral;
+  padding: 2px 2px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -553,4 +557,14 @@ main {
 
 footer {
   bottom: 0;
+}
+
+.centerBAC {
+  text-align: center;
+}
+
+.BeerChugGif {
+  border: 5px solid lightgray;
+  border-radius: 5px;
+  height: 400px;
 }
